namespace.yaml
apiVersion: v1
# apiVersion tells Kubernetes which API version
# to use for this resource
# v1 = core API (Pods, Services, Namespaces, ConfigMaps)
# apps/v1 = apps API (Deployments, StatefulSets)
# networking.k8s.io/v1 = networking (Ingress)

kind: Namespace
# kind = what TYPE of resource this is
# Every manifest starts with apiVersion and kind

metadata:
  name: taskflow
  # The namespace name
  # All our resources will use: namespace: taskflow
  labels:
    name: taskflow
    environment: production
    # Labels are key-value pairs attached to resources
    # Used for filtering, selecting, and organizing
    # kubectl get all -l environment=production
